# obs-studio

./: .gitmodules
cmake/Modules/: CopyMSVCBins.cmake
plugins/: CMakeLists.txt
plugins/obs-transitions/: transition-stinger.c
plugins/obs-voicemeeter/: CMakeLists.txt
